Added my finished etch a sketch project. I managed to figure out that I just needed to use my old code for the default grid, but instead of using i=16 and increment, make i equal to the player's input and generate a grid from there

--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,18 @@
 .squareInGrid{
     flex: 0 0 calc(6.25% - 2px);
     margin: 1px;
-    position: relative;
+    /* position: relative; */
     height: 0;
     padding-bottom: 6.25%;
+    background-color: blue;
+}
+.squareInGrid2{
+    flex: 0 0 calc(var(--player-percent) - 2px);
+    margin: .5px;
+    padding: 0px;
+    position: relative;
+    height: 0;
+    padding-bottom: var(--player-percent);
     background-color: blue;
 }
 /* .squareInGrid:hover{
